# tree-modeling

./: .gitignore  README.md  analyze_structure.py  christmas_tree.py  christmas_tree.traj  christmas_tree.xyz  pyproject.toml  small_tree.traj  twinkling_tree.traj
xmastree/: __init__.py  tree.py  viewer.py
